# chip8-emu

./: .gitignore  CMakeLists.txt  README.md  core.cpp  core.h  keyboard.cpp  keyboard.h  main.cpp  timer.cpp  timer.h
include/SDL2/: SDL_config.h
